Fix bridge methods keeping hashed names with intermediary